--- a/app/src/main/res/layout/activity_pass_finder.xml
+++ b/app/src/main/res/layout/activity_pass_finder.xml
@@ -17,7 +17,7 @@
         <include layout="@layout/element_pass_finder" />
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
+        android:id="@+id/notice_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="160dp"
@@ -29,7 +29,7 @@
         app:pressedTranslationZ="12dp"
         android:src="@drawable/oval" />
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab1"
+        android:id="@+id/schedule_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="90dp"
@@ -41,7 +41,7 @@
         app:pressedTranslationZ="12dp"
         android:src="@drawable/oval" />
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/plus_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
