--- a/app/src/main/res/layout/element_pass_finder.xml
+++ b/app/src/main/res/layout/element_pass_finder.xml
@@ -21,6 +21,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="4dp"
         android:layout_height="16dp"
         android:layout_gravity="center_horizontal|bottom"
         android:gravity="center">
