--- a/app/src/main/res/layout/element_pass_finder_card.xml
+++ b/app/src/main/res/layout/element_pass_finder_card.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical">
 
@@ -77,7 +77,7 @@
                 android:id="@+id/pathfinder_field"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="3dp"
                 android:text="Philosophy of science, Epistemology etc"
                 android:textColor="@color/path_contents"
                 android:textSize="12sp" />
@@ -85,7 +85,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="13dp"
                 android:text="RELATED COLLEGE"
                 android:textColor="@color/path_subject"
                 android:textSize="8sp"
@@ -94,7 +94,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="3dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -115,7 +115,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="13dp"
                 android:text="MORE INFORMATIONS"
                 android:textColor="@color/path_subject"
                 android:textSize="8sp"
@@ -124,7 +124,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="3dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -161,7 +161,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="13dp"
                 android:text="RELATED BOOKS"
                 android:textColor="@color/path_subject"
                 android:textSize="8sp"
@@ -170,7 +170,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="3dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -193,10 +193,11 @@
     </LinearLayout>
 
     <ImageButton
+        android:id="@+id/arrow_button"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="147dp"
+        android:layout_marginTop="146dp"
         android:background="@drawable/fab_arrow_oval"
         android:src="@drawable/fab_arrow_selector" />
 </FrameLayout>
