--- a/app/src/main/res/layout/element_pass_finder.xml
+++ b/app/src/main/res/layout/element_pass_finder.xml
@@ -19,53 +19,5 @@
 
     <include layout="@layout/element_pass_finder_card" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_height="16dp"
-        android:layout_gravity="center_horizontal|bottom"
-        android:gravity="center">
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-
-        <ImageButton
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:padding="4dp"
-            android:src="@drawable/micro_oval_selector" />
-    </LinearLayout>
+    <include layout="@layout/element_oval_swiper" />
 </LinearLayout>
