--- a/app/src/main/res/layout/activity_career_finder.xml
+++ b/app/src/main/res/layout/activity_career_finder.xml
@@ -2,10 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:gravity="center"
+    android:background="@mipmap/findyourpath_bg"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-
-        android:text="진로탐색기"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:dividerHeight="0dp"
+        android:divider="@null"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:layout_height="match_parent">
+    </ListView>
 </LinearLayout>
