--- a/app/src/main/res/layout/element_career_header_card.xml
+++ b/app/src/main/res/layout/element_career_header_card.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/pathfinder_title"
+            android:id="@+id/path_finder_title"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:alpha="0.8"
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/pathfinder_person"
+            android:id="@+id/path_finder_person"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
