--- a/app/src/main/res/layout/element_path_finder.xml
+++ b/app/src/main/res/layout/element_path_finder.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/main_bg01"
     android:gravity="center_vertical"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/pathfinder_header"
+        android:id="@+id/path_finder_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -16,8 +15,14 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:background="@color/translate"
+        android:id="@+id/viewPager"
+        android:layout_height="356dp">
 
-    <include layout="@layout/element_pass_finder_card" />
+    </android.support.v4.view.ViewPager>
 
     <include layout="@layout/element_oval_swiper" />
 </LinearLayout>
