--- a/app/src/main/res/layout/activity_path_finder.xml
+++ b/app/src/main/res/layout/activity_path_finder.xml
@@ -4,8 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/path_finder_bg"
     android:background="@mipmap/main_bg01"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
