--- a/app/src/main/res/layout/element_oval_swiper.xml
+++ b/app/src/main/res/layout/element_oval_swiper.xml
@@ -4,47 +4,48 @@
     android:layout_height="16dp"
     android:layout_gravity="center_horizontal|bottom"
     android:layout_marginTop="4dp"
+    android:id="@+id/oval_container"
     android:gravity="center">
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 
-    <ImageButton
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="4dp"
         android:src="@drawable/micro_oval_selector" />
 </LinearLayout>
