--- a/app/src/main/res/layout/element_career_word_header.xml
+++ b/app/src/main/res/layout/element_career_word_header.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="다음 중 자신의 성향에 가까운 영어 단어를 모두 고르세요"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:gravity="center"
         android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_width="match_parent"
         android:weightSum="6"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:layout_height="2dp">
