--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:id="@+id/library_list_view"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        android:layout_height="match_parent"></ListView>
+        android:id="@+id/start_view_pager"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
