--- a/app/src/main/res/layout/element_career_popup.xml
+++ b/app/src/main/res/layout/element_career_popup.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout"
-    android:background="@color/gray"
+    android:background="@color/translate"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -16,7 +16,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="24dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="24dp"
             android:layout_above="@+id/footer"
             android:orientation="vertical">
 
@@ -43,7 +45,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/footer"
-            android:layout_marginTop="24dp"
             android:layout_alignParentBottom="true"
             android:orientation="vertical">
 
