--- a/app/src/main/res/layout/element_path_finder.xml
+++ b/app/src/main/res/layout/element_path_finder.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_gravity="center"
         android:background="@color/translate"
-        android:id="@+id/viewPager"
+        android:id="@+id/pathfinder_view_pager"
         android:layout_height="356dp">
 
     </android.support.v4.view.ViewPager>
