--- a/app/src/main/res/layout/activity_career_finder.xml
+++ b/app/src/main/res/layout/activity_career_finder.xml
@@ -26,6 +26,7 @@
             android:layout_below="@+id/header"
             android:divider="@null"
             android:dividerHeight="6dp"
+            android:paddingTop="6dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"></ListView>
 
@@ -38,7 +39,15 @@
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/result_container"
+        android:visibility="gone"
+        android:layout_height="match_parent">
+        <include layout="@layout/element_career_result"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:id="@+id/popup_container"
+        android:visibility="gone"
         android:layout_height="match_parent">
     <include layout="@layout/element_career_popup"/>
     </LinearLayout>
