--- a/app/src/main/res/layout/element_career_finder_header.xml
+++ b/app/src/main/res/layout/element_career_finder_header.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/black"
     android:layout_height="296dp">
     <TextView
         android:layout_width="match_parent"
-        android:text="Related People for your path"
+        android:text="@string/career_people_en"
         android:gravity="center"
+        android:id="@+id/path_finder_people"
         android:textSize="16dp"
         android:textStyle="bold"
         android:alpha="0.9"
         android:textColor="@color/white"
         android:layout_height="40dp" />
-    <include layout="@layout/element_career_header_card"/>
+    <!--<include layout="@layout/element_career_header_card"/>-->
+    <android.support.v4.view.ViewPager
+        android:layout_width="wrap_content"
+        android:id="@+id/career_viewpager"
+        android:layout_height="172dp">
+
+    </android.support.v4.view.ViewPager>
     <include layout="@layout/element_oval_swiper" />
     <View android:layout_width="match_parent"
         android:layout_marginTop="24dp"
@@ -21,7 +27,8 @@
         android:layout_height="0.5dp" android:background="@color/white"/>
     <TextView
         android:layout_width="match_parent"
-        android:text="Recommanded College for your path"
+        android:text="@string/career_recommend_en"
+        android:id="@+id/recommend_college"
         android:gravity="center"
         android:textSize="16dp"
         android:textStyle="bold"
