--- a/app/src/main/res/layout/element_career_result.xml
+++ b/app/src/main/res/layout/element_career_result.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:gravity="center"
     android:background="@mipmap/findyourpath_bg"
     android:layout_height="match_parent">
     <ListView
-        android:padding="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_marginBottom="8dp"
         android:dividerHeight="8dp"
         android:layout_width="match_parent"
         android:id="@+id/college_list_view"
