--- a/app/src/main/res/layout/popup_alert.xml
+++ b/app/src/main/res/layout/popup_alert.xml
@@ -7,6 +7,7 @@
         android:layout_width="280dp"
         android:orientation="vertical"
         android:layout_gravity="center"
+        android:background="@color/white"
         android:elevation="10dp"
         android:layout_height="wrap_content">
         <TextView
