--- a/app/src/main/res/layout/popup_kakao.xml
+++ b/app/src/main/res/layout/popup_kakao.xml
@@ -36,12 +36,12 @@
             android:textColor="@color/black"
             android:textSize="16sp" />
 
-            <com.kakao.usermgmt.LoginButton
+            <com.uos.uosinfo.ui.KaKaoLoginButton
                 android:id="@+id/com_kakao_login"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="37dp"/>
 
             <TextView
                 android:id="@+id/no"
