--- a/app/src/main/res/drawable/recruitment_background_selector.xml
+++ b/app/src/main/res/drawable/recruitment_background_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/recruitment_selected_background"/>
-    <item android:state_selected="false" android:drawable="@drawable/recruitment_unselected_background"/>
+    <item android:state_pressed="false" android:drawable="@drawable/recruitment_selected_background"/>
+    <item android:state_pressed="true" android:drawable="@drawable/recruitment_unselected_background"/>
 </selector>
