--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:textSize="18sp"
             android:paddingLeft="12dp"
             android:textColor="@color/white"
-            android:text="서울시립대학교 진로가이드"
+            android:text="@string/app_name"
             android:layout_height="wrap_content" />
         </android.support.v7.widget.Toolbar>
         <android.support.design.widget.TabLayout
