--- a/app/src/main/res/layout/popup_department.xml
+++ b/app/src/main/res/layout/popup_department.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/black"
+    android:background="@color/floating_background"
+    android:id="@+id/layout"
     android:layout_height="match_parent">
     <ScrollView
         android:layout_gravity="center"
@@ -26,9 +27,9 @@
                 android:id="@+id/contents"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
+                android:lineSpacingExtra="2dp"
                 android:layout_marginTop="24dp"
                 android:layout_width="match_parent"
-                android:text="콘텐츠"
                 android:textSize="14sp"
                 android:textColor="#37474F"
                 android:layout_height="wrap_content" />
@@ -57,6 +58,7 @@
                     android:layout_marginLeft="24dp"
                     android:layout_marginRight="24dp"
                     android:layout_marginTop="24dp"
+                    android:lineSpacingExtra="2dp"
                     android:layout_width="match_parent"
                     android:text="인재상 내용"
                     android:textSize="14sp"
@@ -87,6 +89,7 @@
 
             </LinearLayout>
             <Button
+                android:id="@+id/reqruitment_button"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
@@ -103,6 +106,7 @@
                 android:background="@color/theme_color"
                 android:layout_height="1px" />
             <LinearLayout
+                android:id="@+id/phone_layout"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
@@ -114,6 +118,7 @@
                     android:src="@mipmap/department_phone"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/phone_textview"
                     android:textSize="14sp"
                     android:textColor="#37474F"
                     android:textStyle="italic"
@@ -126,6 +131,7 @@
                 android:background="@color/theme_color"
                 android:layout_height="1px" />
             <LinearLayout
+                android:id="@+id/web_layout"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
@@ -137,6 +143,7 @@
                     android:src="@mipmap/department_web"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/web_textview"
                     android:textSize="14sp"
                     android:textColor="#37474F"
                     android:textStyle="italic"
