--- a/app/src/main/res/layout/element_qna.xml
+++ b/app/src/main/res/layout/element_qna.xml
@@ -6,6 +6,7 @@
         android:id="@+id/question"
         android:layout_width="240dp"
         android:layout_margin="8dp"
+        android:lineSpacingExtra="2dp"
         android:padding="8dp"
         android:textSize="12sp"
         android:textColor="#607D8B"
@@ -16,6 +17,7 @@
         android:id="@+id/answer"
         android:layout_width="240dp"
         android:layout_marginRight="8dp"
+        android:lineSpacingExtra="2dp"
         android:layout_marginBottom="8dp"
         android:padding="8dp"
         android:textSize="12sp"
