--- a/app/src/main/res/layout/popup_alert.xml
+++ b/app/src/main/res/layout/popup_alert.xml
@@ -11,6 +11,8 @@
         android:elevation="10dp"
         android:layout_height="wrap_content">
         <TextView
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:id="@+id/contents"
             android:layout_width="match_parent"
             android:layout_marginTop="24dp"
