--- a/app/src/main/res/layout/element_floating.xml
+++ b/app/src/main/res/layout/element_floating.xml
@@ -30,35 +30,7 @@
             android:elevation="4dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="5dp"
-            android:src="@mipmap/department_web" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/web_02_button"
-        android:layout_width="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:orientation="horizontal"
-        android:visibility="invisible"
-        android:layout_marginBottom="282dp"
-        android:layout_marginRight="@dimen/fab_mini_margin"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
-            android:text="입학사정관"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            android:textColor="@color/fab_text_color"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="9dp"
-            android:background="@drawable/fab_mini_selector"
-            android:elevation="4dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="5dp"
-            android:src="@mipmap/department_web" />
+            android:src="@mipmap/fab_web" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/web_03_button"
@@ -66,7 +38,7 @@
         android:layout_gravity="bottom|end"
         android:orientation="horizontal"
         android:visibility="invisible"
-        android:layout_marginBottom="232dp"
+        android:layout_marginBottom="282dp"
         android:layout_marginRight="@dimen/fab_mini_margin"
         android:layout_height="wrap_content">
         <TextView
@@ -86,10 +58,38 @@
             android:elevation="4dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="5dp"
-            android:src="@mipmap/department_web" />
+            android:src="@mipmap/fab_web" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/phone_01_button"
+        android:id="@+id/web_02_button"
+        android:layout_width="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:orientation="horizontal"
+        android:visibility="invisible"
+        android:layout_marginBottom="232dp"
+        android:layout_marginRight="@dimen/fab_mini_margin"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:text="입학사정관실"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            android:textColor="@color/fab_text_color"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="9dp"
+            android:background="@drawable/fab_mini_selector"
+            android:elevation="4dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="5dp"
+            android:src="@mipmap/fab_web" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/phone_02_button"
         android:layout_width="wrap_content"
         android:layout_gravity="bottom|end"
         android:orientation="horizontal"
@@ -101,7 +101,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
-            android:text="전화문의·입학사정관"
+            android:text="입학처"
             android:textSize="12sp"
             android:textStyle="normal"
             android:textColor="@color/fab_text_color"
@@ -117,7 +117,7 @@
             android:src="@mipmap/fab_phone" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/phone_02_button"
+        android:id="@+id/phone_01_button"
         android:layout_width="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="132dp"
@@ -129,7 +129,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
-            android:text="전화문의·입학처"
+            android:text="입학사정관실"
             android:textSize="12sp"
             android:textStyle="normal"
             android:textColor="@color/fab_text_color"
